add progress views to content view and settings view

--- a/RepoStreak/Localization/Localizable.xcstrings
+++ b/RepoStreak/Localization/Localizable.xcstrings
@@ -113,6 +113,16 @@
         }
       }
     },
+    "Downloading data" : {
+      "localizations" : {
+        "pl" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Pobieranie danych"
+          }
+        }
+      }
+    },
     "Go code!" : {
       "localizations" : {
         "en" : {
